mobile version collapse functionality fixed

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -264,6 +264,7 @@ nav
 				background-repeat: no repeat
 				padding: 1px
 				cursor: pointer
+				z-index: 200
 			.day-name.hidden::after
 				display: none
 			.day-name::before
@@ -278,6 +279,7 @@ nav
 				background-repeat: no repeat
 				padding: 1px
 				cursor: pointer
+				z-index: 200
 			.day-name.hidden1::before
 				display: none
 
@@ -315,6 +317,7 @@ nav
 		right: 100px
 		top: 10px
 		transform: scale(0.65)
+		z-index: -10
 
 .partners
 	margin-top: 150px
